[build-system]
requires = ["setuptools >= 61.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "xcube" # PYPI RENAME THIS LINE (do not remove this comment, see #1010) 
dynamic = ["version", "readme"]
authors = [
  {name = "xcube Development Team"}
]
description = """\
  xcube is a Python package for generating and exploiting \
  data cubes powered by xarray, dask, and zarr. \
  """
keywords = [
  "analysis ready data", "data science",
  "datacube", "xarray", "zarr"
]
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
  "botocore>=1.34.51",
  "cftime>=1.6.3",
  "click>=8.0",
  "cmocean>=2.0",
  "chartlets>=0.0.28",
  "dask>=2021.6",
  "dask-image>=0.6",
  "deprecated>=1.2",
  "distributed>=2021.6",
  "fiona>=1.8",
  "fsspec>=2021.6",
  "gdal>=3.0",
  "geopandas>=0.8",
  "jdcal>=1.4",
  "jsonschema>=3.2",
  "mashumaro",
  "matplotlib>=3.8.3",
  "netcdf4>=1.5",
  "numba>=0.52",
  "numcodecs>=0.12.1",
  "numpy>=1.16",
  "pandas>=1.3",
  "pillow>=6.0",
  "pyjwt>=1.7",
  "pyproj>=3.0",
  "pyyaml>=5.4",
  "rasterio>=1.2",
  "requests>=2.25",
  "rfc3339-validator>=0.1",
  "rioxarray>=0.11",
  "s3fs>=2021.6",
  "setuptools>=41.0",
  "shapely>=1.6",
  "tabulate>=0.9",
  "tornado>=6.0",
  "urllib3>=1.26",
  "xarray>=2024.7",
  "zarr>=2.11"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: Unix",
  "Operating System :: MacOS",
]

# entry point xcube's CLI
[project.scripts]
xcube = "xcube.cli.main:main"

# entry point xcube's default extensions
[project.entry-points.xcube_plugins]
xcube = "xcube.plugin:init_plugin"

[tool.setuptools.package-data]
"xcube.webapi.meta" = [
    "data/openapi.html",
]
"xcube.webapi.viewer" = [
    "dist/*", "dist/**/*",
]

[tool.setuptools.dynamic]
version = {attr = "xcube.__version__"}
readme = {file = "README.md", content-type = "text/markdown"}

[tool.setuptools.packages.find]
exclude = [
  "test*",
  "doc*"
]

[project.optional-dependencies]
dev = [
  "flake8>=3.7",
  "moto>=4",
  "pytest>=4.4",
  "pytest-cov>=2.6",
  "requests-mock>=1.8",
  "werkzeug"
]

[project.urls]
Documentation = "https://xcube.readthedocs.io/en/latest/"
Source = "https://github.com/xcube-dev/xcube"
Download = "https://pypi.org/project/xcube-core/#files"
Tracker = "https://github.com/xcube-dev/xcube/issues"
"Release notes" = "https://github.com/xcube-dev/xcube/releases"
Changelog = "https://github.com/xcube-dev/xcube/blob/main/CHANGES.md"
